fixed padding on mobile feartures.

--- a/scss/components/_features.scss
+++ b/scss/components/_features.scss
@@ -55,7 +55,7 @@
   }
 
   &__ul {
-    padding: 0 1.5rem 4rem 0;
+    padding: 0 1.3rem 4rem 1.3rem;
 
     @media (min-width: 768px) {
       max-width: 573px;
